--- a/Contacto.html
+++ b/Contacto.html
@@ -19,7 +19,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../Contacto.css" />
+    <link rel="stylesheet" href="../styles/contacto.css" />
   </head>
   <body>
     <header>
