--- a/Profesionales.html
+++ b/Profesionales.html
@@ -19,7 +19,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./Profesionales.css" />
+    <link rel="stylesheet" href="./styles/profesionales.css" />
   </head>
   <body>
     <header>
@@ -41,7 +41,8 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav"> <!--Navbar normal-->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <!--Navbar normal-->
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="index.html"
@@ -69,11 +70,14 @@
     </header>
     <main>
       <div class="titulo">
-        <h1>PROFESIONALES</h1> <!--Título-->
+        <h1>PROFESIONALES</h1>
+        <!--Título-->
       </div>
-      <div class="container"> <!--Profesionales, dividos por columnas de 6-->
+      <div class="container">
+        <!--Profesionales, dividos por columnas de 6-->
         <section class="row">
-          <div class="col-md-6"> <!--Primer profesional-->
+          <div class="col-md-6">
+            <!--Primer profesional-->
             <div>
               <h3>Adriana Lobosco</h3>
             </div>
@@ -97,7 +101,8 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-6"> <!--Segundo profesional-->
+          <div class="col-md-6">
+            <!--Segundo profesional-->
             <div>
               <h3>Rocio Fernandez Furnari</h3>
             </div>
@@ -118,7 +123,8 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-6"> <!--Tercer profesional-->
+          <div class="col-md-6">
+            <!--Tercer profesional-->
             <div>
               <h3>Dina Marianela Rodríguez</h3>
             </div>
@@ -142,7 +148,8 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-6"> <!--Cuarto profesional-->
+          <div class="col-md-6">
+            <!--Cuarto profesional-->
             <div>
               <h3>Carolina Inés Nuñez</h3>
             </div>
@@ -165,7 +172,8 @@
           </div>
         </section>
       </div>
-      <div class="volver"> <!--Volver a la página de inicio-->
+      <div class="volver">
+        <!--Volver a la página de inicio-->
         <h4><a href="index.html"> Volver </a></h4>
       </div>
     </main>
