--- a/Tratamientos.html
+++ b/Tratamientos.html
@@ -19,15 +19,17 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./tratamientos.css" />
+    <link rel="stylesheet" href="./styles/tratamientos.css" />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark background">
         <div class="container-fluid navegacion">
+          <!--Logo-->
           <a class="navbar-brand" href="./index.html"
             ><img src="./Fotos/Logo.jpg" alt="Logo" class="logo"
           /></a>
+          <!--Menú hamburguesa-->
           <button
             class="navbar-toggler"
             type="button"
@@ -40,6 +42,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
+            <!--Navbar normal-->
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="index.html"
@@ -47,12 +50,12 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="profesionales.html">Profesionales</a>
+                <a class="nav-link" href="profesionales.html"
+                  >Profesionales</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="tratamientos.html"
-                  >Tratamientos</a
-                >
+                <a class="nav-link active" href="tratamientos.html">Tratamientos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="valores.html">Valores</a>
@@ -64,21 +67,25 @@
           </div>
         </div>
       </nav>
-    </header>
     <main>
-      <div class="titulo"> <!--Titulo-->
+      <div class="titulo">
+        <!--Titulo-->
         <h1>TRATAMIENTOS</h1>
       </div>
-      <section class="container contenedor"> <!--Contenedores de tabla-->
-        <table class="table table-dark table-striped"> <!--Estilo de tabla-->
-          <thead> <!--Encabezado tabla-->
-            <tr> 
+      <section class="container contenedor">
+        <!--Contenedores de tabla-->
+        <table class="table table-dark table-striped">
+          <!--Estilo de tabla-->
+          <thead>
+            <!--Encabezado tabla-->
+            <tr>
               <th scope="col">Tratamiento</th>
               <th scope="col">Descripción</th>
               <th scope="col">Desde...</th>
             </tr>
           </thead>
-          <tbody> <!--Contenido tabla-->
+          <tbody>
+            <!--Contenido tabla-->
             <tr>
               <th scope="row">Ortodoncia</th>
               <td>Aparatología estética de última generación</td>
